# kurumi

./: Cargo.toml  README.md  build.rs
src/: cli.rs  constants.rs  error.rs  gui.rs  main.rs  mode.rs  util.rs
src/gui/: imp.rs  key_binding.rs  pdfpage.rs  status_object.rs  window.rs
src/gui/pdfpage/: imp.rs
src/gui/status_object/: imp.rs
src/gui/window/: imp.rs
ui/: pdf-page.ui  ui.gresource.xml  viewer.css  window.ui
ui/css/: style.css
