[package]
name = "kurumi"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"
description = "Minimalistic PDF viewer based on GTK and Poppler"
authors = ["Charles Dong"]


[dependencies]
clap = { version = "4", features = ["derive"] }
gtk4 = { version = "0.8", feature = ["v4_10"] }
poppler-rs = "0.23"
url = "2.5.0"
